syntax = "proto3";

package reflexpb;

option go_package = "github.com/luno/reflex/reflexpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Reflex {
  rpc Stream (StreamRequest) returns (stream Event) {}
}

message StreamRequest {
  reserved 1;
  StreamOptions options = 2;
  string after = 3;
}

message Event {
  reserved 1;
  reserved 2;
  int32 type = 3;
  google.protobuf.Timestamp timestamp = 4;
  string foreign_id = 5;
  string id = 6;
  bytes metadata = 7;
  bytes trace = 8;
}

message StreamOptions {
  google.protobuf.Duration lag = 1;
  bool fromHead = 2;
  reserved 3;
  bool toHead = 4;
}

message Trace {
  string trace_id = 1;
  string span_id = 2;
}